# PersonalProjects

./: LICENSE  README.md
ASM/AMD64/LFSR/: LFSR  LFSR.ASM  README.MD  build.sh
Java/Spring/DistributedImgEnc/: README.md
Java/Spring/DistributedImgEnc/CEnc/: CMakeLists.txt  imgenc.c
Java/Spring/DistributedImgEnc/KafkaContainer/: docker-compose.yml
Java/Spring/DistributedImgEnc/ServiceLayer/: pom.xml
Java/Spring/DistributedImgEnc/ServiceLayer/src/main/resources/: application.properties
Java/Spring/DistributedImgEnc/UserLayer/userlayer/: pom.xml
Java/Spring/DistributedImgEnc/UserLayer/userlayer/src/main/resources/: application.properties
Java/Spring/DistributedImgEnc/UserLayer/userlayer/src/main/resources/templates/: upload.html
Java/Spring/WouldILie/: README.MD  docker-compose.yml  pom.xml
Java/Spring/WouldILie/src/main/java/com/example/WouldILie/: WouldILieApplication.java
Java/Spring/WouldILie/src/main/java/com/example/WouldILie/conf/: SecurityConf.java
Java/Spring/WouldILie/src/main/java/com/example/WouldILie/cont/: AdminCont.java  UserCont.java
Java/Spring/WouldILie/src/main/java/com/example/WouldILie/entities/: QuestionEntity.java  TeamEntity.java  UserEntity.java  VoteEntity.java
Java/Spring/WouldILie/src/main/resources/: application.properties
Java/Spring/WouldILie/src/main/resources/templates/admin/: dashboard.html
Java/Spring/WouldILie/src/main/resources/templates/user/: user-dashboard.html
Java/Spring/WouldILie/src/test/java/com/example/WouldILie/: WouldILieApplicationTests.java
Linux/Scripts/: README.MD  local-stopwatch.sh
(+45 files in other folders)
